--- a/examples/ipw.ipynb
+++ b/examples/ipw.ipynb
@@ -305,7 +305,7 @@
     }
    ],
    "source": [
-    "# We can now preict the weight of each individual:\n",
+    "# We can now predict the weight of each individual:\n",
     "ipw.compute_weights(data.X, data.a).head()"
    ]
   },
